Changes from List.of to Arrays.asList to allow nulls in at initialization