@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -38,7 +38,7 @@ public class ArrayTypeMatchesArraysTest {
     public void testAnArrayIsAnArrayPasses() {
         // an array is an array
         ArrayTypeMatchesArrays.ArrayTypeMatchesArrays1.validate(
-            List.of(
+            Arrays.asList(
             ),
             configuration
         );
