@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -68,7 +68,7 @@ public class BooleanTypeMatchesBooleansTest {
         // an array is not a boolean
         Assert.assertThrows(ValidationException.class, () -> JsonSchema.validateObject(
             BooleanTypeMatchesBooleans.BooleanTypeMatchesBooleans1.class,
-            List.of(
+            Arrays.asList(
             ),
             configuration
         ));
