@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -30,7 +30,7 @@ public class IntegerTypeMatchesIntegersTest {
         // an array is not an integer
         Assert.assertThrows(ValidationException.class, () -> JsonSchema.validateObject(
             IntegerTypeMatchesIntegers.IntegerTypeMatchesIntegers1.class,
-            List.of(
+            Arrays.asList(
             ),
             configuration
         ));
