@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -59,7 +59,7 @@ public class MinpropertiesValidationTest {
     public void testIgnoresArraysPasses() {
         // ignores arrays
         MinpropertiesValidation.MinpropertiesValidation1.validate(
-            List.of(
+            Arrays.asList(
             ),
             configuration
         );
