@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -86,7 +86,7 @@ public class NumberTypeMatchesNumbersTest {
         // an array is not a number
         Assert.assertThrows(ValidationException.class, () -> JsonSchema.validateObject(
             NumberTypeMatchesNumbers.NumberTypeMatchesNumbers1.class,
-            List.of(
+            Arrays.asList(
             ),
             configuration
         ));
