@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -29,7 +29,7 @@ public class ObjectTypeMatchesObjectsTest {
         // an array is not an object
         Assert.assertThrows(ValidationException.class, () -> JsonSchema.validateObject(
             ObjectTypeMatchesObjects.ObjectTypeMatchesObjects1.class,
-            List.of(
+            Arrays.asList(
             ),
             configuration
         ));
