@@ -7,7 +7,7 @@ import org.openapijsonschematools.configurations.SchemaConfiguration;
 import org.openapijsonschematools.exceptions.ValidationException;
 import org.openapijsonschematools.schemas.validation.JsonSchema;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.AbstractMap;
 
@@ -57,7 +57,7 @@ public class StringTypeMatchesStringsTest {
         // an array is not a string
         Assert.assertThrows(ValidationException.class, () -> JsonSchema.validateObject(
             StringTypeMatchesStrings.StringTypeMatchesStrings1.class,
-            List.of(
+            Arrays.asList(
             ),
             configuration
         ));
